--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
 		"prod": "npm run build && npm run server:prod",
 		"build": "vite build",
 		"server": "ts-node server.ts",
-		"server:prod": "cross-env NODE_ENV=production ts-node server.ts"
+		"server:prod": "cross-env NODE_ENV=production ts-node server.ts",
+		"generate": "drizzle-kit generate:sqlite",
+		"migrate": "ts-node database/migrate.ts"
 	},
 	"dependencies": {
+		"@libsql/client": "^0.3.6",
 		"@mdx-js/mdx": "^2.3.0",
 		"@trpc/client": "^10.37.1",
 		"@trpc/server": "^10.37.1",
@@ -19,9 +22,14 @@
 		"@vitejs/plugin-react": "^3.0.0",
 		"arkhi": "^0.1.72",
 		"compression": "^1.7.4",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
+		"dotenv": "^16.3.1",
+		"drizzle-orm": "^0.29.0",
 		"express": "^4.18.1",
 		"gray-matter": "^4.0.3",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.292.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
@@ -35,8 +43,12 @@
 	},
 	"type": "module",
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.6",
+		"@types/cors": "^2.8.16",
 		"@types/express": "^4.17.18",
+		"@types/jsonwebtoken": "^9.0.5",
 		"autoprefixer": "^10.4.16",
+		"drizzle-kit": "^0.20.2",
 		"postcss": "^8.4.31",
 		"prettier": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.7",
